Merge v 3.0.0 from website